--- a/case_study/facility/update.html
+++ b/case_study/facility/update.html
@@ -95,17 +95,21 @@
             <div class="circle"></div>
             <div class="form-inner">
                 <h1>Form chỉnh sửa dịch vụ</h1>
+                <select id="facilityType" class="form-select">
+                    <option selected value="0">Villa</option>
+                    <option value="1">House</option>
+                    <option value="2">Room</option>
+                </select>
                 <input type="text" placeholder="Tên dịch vụ">
-                <input type="email" placeholder="Loại dịch vụ">
-                <input type="email" placeholder="Kiểu thuê">
-                <input type="email" placeholder="Diện tích">
-                <input type="email" placeholder="Giá">
-                <input type="email" placeholder="Số người tối đa">
-                <input type="email" placeholder="Loại phòng">
-                <input type="email" placeholder="Mô tả tiện nghi khác">
-                <input type="email" placeholder="Diện tích hồ bơi">
-                <input type="email" placeholder="Số tầng">
-                <input type="email" placeholder="Dịch vụ miễn phí đi kèm">
+                <input type="text" placeholder="Kiểu thuê">
+                <input type="text" placeholder="Diện tích">
+                <input type="text" placeholder="Giá">
+                <input type="text" placeholder="Số người tối đa">
+                <input type="text" placeholder="Loại phòng">
+                <input type="text" placeholder="Mô tả tiện nghi khác">
+                <input type="text" placeholder="Diện tích hồ bơi">
+                <input type="text" placeholder="Số tầng">
+                <input type="text" placeholder="Dịch vụ miễn phí đi kèm">
                 <!--        <textarea placeholder="Message..." rows="5"></textarea>-->
                 <button type="submit" href="/">Submit</button>
             </div>
