--- a/case_study/customer/create.html
+++ b/case_study/customer/create.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact us</title>
+    <title>Trang thêm mới khách hàng</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -94,7 +94,7 @@
             <div class="form-right-decoration"></div>
             <div class="circle"></div>
             <div class="form-inner">
-                <h1>Form chỉnh sửa khách hàng</h1>
+                <h1 style="color: #1e2125">Form thêm mới khách hàng</h1>
                 <input type="text" placeholder="Tên khách hàng">
                 <input type="text" placeholder="Mã khách hàng">
                 <input type="text" placeholder="Ngày sinh">
