--- a/case_study/customer/create.html
+++ b/case_study/customer/create.html
@@ -104,7 +104,7 @@
                 <input type="text" placeholder="Địa chỉ">
                 <input type="text" placeholder="Email">
                 <!--        <textarea placeholder="Message..." rows="5"></textarea>-->
-                <button type="submit" href="/">Submit</button>
+                <button type="submit">Submit</button>
             </div>
         </form>
     </div>
